# ChangeLog for app-shells/zshdb
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*zshdb-9999 (25 Sep 2011)

  25 Sep 2011; Michael Weber <xmw@gentoo.org> +zshdb-9999.ebuild,
  +metadata.xml:
  Initial import
