@@ -1,23 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-- -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
-
-EBUILD zshdb-9999.ebuild 618 RMD160 c47312cfbf33b758f15d72f65dac4e7e207d7f7c SHA1 11985eb9f17d0e132463c737314a2f760abd12a7 SHA256 5d522ae9e557544663b026d15a78687988b3758c14cb62895e17d5427d543e3c
-MISC ChangeLog 245 RMD160 02d084a254bf7fa3faffe097085b98253d6298f6 SHA1 1c3bc15280978e4df7510ef2e6250438290b9a58 SHA256 3da821066dc756bef07213d20af45db9f92cebcbdfa771765071f9dccae3dea8
+DIST zshdb-0.08.tar.gz 140400 RMD160 4d266c534cb39f000fceb929c087597c85bb6437 SHA1 b4f8d47985f009c6044892e31e9062c9aa47d913 SHA256 9d49597819af9f6b1661fa67727fca987ace6bab982d41d2f91242dd6f5be3c0
+EBUILD zshdb-0.08.ebuild 660 RMD160 e3487df8890021aa36a6793a2c9ee04e6a90b97c SHA1 5af64798388cdbb430de0acf61b9d545b6e94ee8 SHA256 7c53100c442fd20d13c1b80a2d11f32efd3e94b95dbc7b27f7fc9343e37838d9
+EBUILD zshdb-9999.ebuild 611 RMD160 1d265290c02a3a8ee695938b04232eee49d22503 SHA1 f894fef5e1f4ef25eac7e11c864d0491ee42f782 SHA256 eea27257f6783085d29280439c07b7dc9bcfdd74761993ce9e7ce687ddc5759f
+MISC ChangeLog 401 RMD160 37b5c8d5600bdab0d96e4884851cc42b602221fe SHA1 f75de67cb0fd5afc4df2a804adf257803019673b SHA256 8199a5c0283b6606d43bd6b12f18eb7f8915764dc97d7bae98ec72baac6e8af0
 MISC metadata.xml 245 RMD160 6b03982a4d5f32d9fa6b9259ae36f9fcb07c8404 SHA1 fb16c7b4c5ab071dd979f761b8bb075f5396b737 SHA256 375a1da02cd2c393ce2378a73c1ce08134bc030b3bb378c6a4d6ca9cd5be1f8d
-- -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
-
-iF4EAREIAAYFAk5/q0MACgkQknrdDGLu8JAXqAD+IgxiywjNEQOTNXwUG+AGmhYH
-7uLXwhZKcj0XKe9tjdUA/1aJS3fpXLNPcUGgr4uGfl5Pyt7LPpfSiFOmX6a/9ZMO
-=XWmG
-- -----END PGP SIGNATURE-----
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk5/q5QACgkQknrdDGLu8JBTOgD+LWf4IH98ZmRWVx+2qurpK7YY
-/GtM6d0rT7tmhNGZOWkA/ROfXGdoGMsHXjBPbMT9YGuxObNHjp3A/8M5kimAKMCY
-=LzU4
+iF4EAREIAAYFAk5/rlQACgkQknrdDGLu8JDnEQD/W1hnbWELcS26BGXBP9EOcLXq
+9u7L6tWo/KTF0RacVhUA/0+35DA20ejLAghmNXNu6h5nhLGo5F14WXe2jy1FIVmt
+=aqJ2
 -----END PGP SIGNATURE-----
