@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*zshdb-0.08 (25 Sep 2011)
+
+  25 Sep 2011; Michael Weber <xmw@gentoo.org> +zshdb-0.08.ebuild,
+  zshdb-9999.ebuild:
+  fixed keywords, added released version
+
 *zshdb-9999 (25 Sep 2011)
 
   25 Sep 2011; Michael Weber <xmw@gentoo.org> +zshdb-9999.ebuild,
